--- a/cmake/ffi_generated.py.in
+++ b/cmake/ffi_generated.py.in
@@ -3,8 +3,8 @@ import cffi
 from pyroxene.companion_generator import generate_cdef, CompanionCodeGenerator
 
 gen = CompanionCodeGenerator(
-    inc_paths="${FFI_INCLUDE_DIRECTORIES}".split(";"),
-    src_files="${FFI_INTERFACE_SOURCES}".split(";"),
+    inc_paths="${target_include_directories}".split(";"),
+    src_files="${target_interface_sources}".split(";"),
     defines=[],
 )
 
@@ -12,5 +12,10 @@ gen.preprocess()
 
 ffibuilder = cffi.FFI()
 ffibuilder.cdef(generate_cdef(gen))
-ffibuilder.set_source("mathlib_ffi", source='#include "mathlib.h"')
+ffibuilder.set_source(
+    "${target}",
+    source="".join(
+        [f'#include "{f}"\n' for f in "${target_interface_sources}".split(";")]
+    )
+)
 ffibuilder.distutils_extension(tmpdir=".")
